update github actions + fix Editor card overflow

--- a/src/components/Body/Deck/Deck.scss
+++ b/src/components/Body/Deck/Deck.scss
@@ -75,7 +75,7 @@
     grid-area: c;
     flex-direction: column;
     justify-content: center;
-    padding: 1.5vmin;
+    padding: 1.5vmin 1.5vmin 3vmin;
     overflow: hidden;
 
     > * {
